# Analyst-Copilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  app.py  conftest.py  docker-compose.yml  generate_tree.ps1  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  smoke_test.ps1
.github/workflows/: ci.yml
analyst_copilot/: .slowapi.env  dataframe_loader.py  dataframe_store.py  eval.py  interfaces.py  long_term_memory.py  observability.py  orchestrator.py  prompts.py  retrieval.py  session_store.py  sql_postprocessor.py  validation.py
docs/: pass1_design.md  pass2_design.md
scripts/: generate_insurance_data.py  load_test.py  synthetic_data.py
tests/: _bootstrap.py  _merge_budget_warning_into_test_prompts.py  _merge_dialect_quoting_into_test_dataframe_loader.py  _merge_validation_additions_into_test_validation.py  test_app.py  test_chunk_token_cap.py  test_correctness_threshold_ml5.py  test_dataframe_loader.py  test_dataframe_store.py  test_dialect_quoting.py  test_eval_templates.py  test_injection.py  test_long_term_memory.py  test_ltm_lock.py  test_observability.py  test_orchestrator.py  test_pandas_executor.py  test_pandas_validation_ml2.py  test_prompts.py  test_retrieval.py  test_sandbox_escape.py  test_session_store.py  test_sql_postprocessor.py  test_ssrf_guard.py  test_validation.py
