[build-system]
requires = ["setuptools>=69", "wheel"]
# P3-13 FIX: was "setuptools.backends.legacy:build".
# The legacy backend is deprecated since setuptools 61.0 and will eventually
# be removed.  setuptools.build_meta is the current standard entry point and
# is a drop-in replacement with identical behaviour for this project.
build-backend = "setuptools.build_meta"

[project]
name = "analyst-copilot"
version = "0.1.0"
description = "LLM-powered data analyst copilot with RAG over tabular schemas"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    # Keep in sync with requirements.txt
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.0",
    "python-dotenv==1.0.1",
    "google-genai==1.0.0",
    # M-13 FIX: upper bound mirrors requirements.txt — prevents a breaking
    # groq major-version release entering the image silently on rebuild.
    "groq>=0.11.0,<1.0.0",
    "tiktoken==0.6.0",
    "sentence-transformers==3.0.1",
    "faiss-cpu==1.8.0",
    "sqlglot==23.9.0",
    "sqlalchemy==2.0.29",
    "psycopg2-binary==2.9.9",
    "aiosqlite==0.20.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "pyarrow==16.0.0",
    # DEP-3 FIX: upper bound added — <4.0.0 prevents unintentional major-version upgrade.
    "openpyxl>=3.1.0,<4.0.0",
    "redis==5.0.4",
    "tqdm==4.66.2",
    # Required by FastAPI UploadFile / multipart form handling (/upload endpoint)
    "python-multipart>=0.0.9",
    # DEP-2 FIX: per-key rate limiting — protects Groq/Gemini TPM budget.
    # M-13 FIX: upper bound mirrors requirements.txt.
    "slowapi>=0.1.9,<1.0.0",
    # H-13 FIX: torch required by long_term_memory._embed_cpu() for device
    # management on the RTX 3050 4GB.  CPU-only wheel; Dockerfile overrides
    # with the pinned torch==2.3.1+cpu wheel from the PyTorch index.
    # P3-14 FIX: added <2.4.0 upper bound — without it `pip install -r
    # requirements.txt` on a developer machine resolves the latest PyTorch
    # (2.6+) which has breaking changes to torch.cuda device management APIs.
    # Bump both this bound and the Dockerfile pin together when upgrading.
    "torch>=2.3.1,<2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "faker==24.9.0",
    "ruff==0.4.4",
    # L6 FIX: pytest-cov required for --cov / --cov-fail-under in ci.yml.
    "pytest-cov>=5.0.0",
    # A-02 FIX: eval.py imports httpx at module level for the /query eval runner.
    # Previously absent from all requirements files — ImportError on every clean install.
    "httpx>=0.27.0,<1.0.0",
]

[project.scripts]
analyst-copilot = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["analyst_copilot*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]   # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["analyst_copilot"]

# ── Pytest ────────────────────────────────────────────────────────────────────
# M10 FIX: pytest.ini and pyproject.toml [tool.pytest.ini_options] previously
# co-existed. pytest.ini takes precedence, so pyproject.toml settings were
# silently ignored. All settings are now consolidated here.
# ACTION REQUIRED: delete pytest.ini from the repo root — it is superseded
# by this section. Any divergence between the two files caused unpredictable
# test-collection behaviour depending on which file pytest found first.
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# M11 FIX (reflected here too): pythonpath makes analyst_copilot/ importable
# as a flat namespace inside tests without needing conftest.py sys.path hacks.
pythonpath = ["analyst_copilot"]
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning:pytest_asyncio\\.plugin",
]
# Coverage gate: 62% (measured 2026-06-11, coverage.py 7.14.1).
# Per-module highlights: dataframe_loader 99%, dataframe_store 99%,
# interfaces 98%, observability 97%, sql_postprocessor 81%,
# long_term_memory 77%, orchestrator/retrieval/session_store/prompts/validation 60-62%.
# eval.py is intentionally low (25%) — async HTTP runner, tested end-to-end only.
# Raise gate by ~5pp per sprint as new tests land.
# Next target: 65% (orchestrator ERROR_CORRECT paths + retrieval ingestion pipeline).
addopts = "--cov=analyst_copilot --cov-report=term-missing --cov-fail-under=62"